# OpenEnv-Hackathon-Meta-x-Scaler

./: .gitignore  EXPLAINER.md  README.md  baseline.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
graders/: __init__.py  grader_classification.py  grader_detection.py  grader_fix.py
server/: app.py
tasks/: __init__.py  task1_easy.py  task2_medium.py  task3_hard.py
